add fields in ClassDTO, FamsClass, change userIds to adminIds and trainerIds